--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
 .hidden {
   display: none;
 }
+
+body {
+  position: fixed;
+  margin: 0;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
