--- a/css/style.css
+++ b/css/style.css
@@ -13,3 +13,13 @@ body {
   background-position: center;
   background-attachment: fixed;
 }
+
+main {
+  width: inherit;
+  height: inherit;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+}
